changing source of trips geojson

--- a/trips.html
+++ b/trips.html
@@ -50,7 +50,7 @@
           type: "line",
           source: {
             type: "geojson",
-            data: "http://evan.town/myna/north-america/driven_20230213.geojson",
+            data: "driven_20230213.geojson",
           },
           layout: {
             "line-join": "round",
