added controls and diabled zoom

--- a/trips.html
+++ b/trips.html
@@ -63,6 +63,8 @@
           },
         });
       });
+      map.addControl(new mapboxgl.NavigationControl());
+      map.scrollZoom.disable();
     </script>
   </body>
 </html>
