fixed speling errors

--- a/cv.html
+++ b/cv.html
@@ -35,7 +35,7 @@ aside:
           <p class="location">Vancouver, British Columbia</p>
           <p class="dates">2017 – present</p>
           <p class="description">
-            Works to advance teaching, learning, and research with geospatial information and technology campus-wide. Coordinates efforts to improve existing resources for maps, atlases, and geodata collections, as well as library services to better equip a large base of GIS users. Regularly particpates in grant-funded projects and community-oriented events. Supervises the work of several students working within the map collection, providing consultation services, and delivering workshops. 
+            Works to advance teaching, learning, and research with geospatial information and technology campus-wide. Coordinates efforts to improve existing resources for maps, atlases, and geodata collections, as well as library services to better equip a large base of GIS users. Regularly participates in grant-funded projects and community-oriented events. Supervises the work of several students working within the map collection, providing consultation services, and delivering workshops. 
           </p>
 
           <br />
@@ -63,7 +63,7 @@ aside:
           <p class="location">Bellingham, Washington</p>
           <p class="dates">2008 – 2010</p>
           <p class="description">
-            Oversaw a collection of approximately 250,000 maps, 1200 atlases, and 32,000 aerial photographs in a busy academic setting. Managed the work of several student employees and volunteers. Carried out large format printing and scanning services. Maintained small GIS computer lab and suite of software.
+            Oversaw a collection of approximately 250,000 maps, 1200 atlases, and 32,000 aerial photographs in a busy academic setting. Managed the work of several student employees and volunteers. Carried out large format printing and scanning services. Maintained a small GIS computer lab and suite of software.
           </p>
           <br />
 
@@ -441,7 +441,7 @@ aside:
           <p>
             <ul>
               <li>
-                Working with maps and atlas conserators
+                Working with maps and atlas conservators
               </li>
               <li>
                 Handling rare maps, atlases, and cultural heritage material
@@ -477,7 +477,7 @@ aside:
           <p>
             <ul>
               <li>
-                General GIS industry core competancies 
+                General GIS industry core competencies 
               </li>
               <li>
                 Trends in digital cartography
@@ -486,7 +486,7 @@ aside:
                 Technical project management using Git and GitHub
               </li>
               <li>
-                Webmapping frameworks and best practices
+                Web mapping frameworks and best practices
               </li>
               <li>
                 Minimal computing and static site building
