--- a/cv.html
+++ b/cv.html
@@ -405,7 +405,7 @@ aside:
         <dd>
           <h2>Healthy Regions & Policies Lab at University of Illinois Urbana-Champaign’s Department of Geography & GIScience</h2>
           <p class="location">
-            Techincal Advisor for Robert Woods Johnson Fund Project to Support Social Determinants of Health Data Discoverbility and Empower Community of Practice
+            Techincal Advisory Board Member, Robert Woods Johnson Fund Project to Support Social Determinants of Health Data Discoverbility and Empower Community of Practice
           </p>
           <p class="dates">January 2023 - present</p>
           <br />
@@ -515,5 +515,18 @@ aside:
         <dd>Available on request</dd>
       </dl>
     </div>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3EP816DGVQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3EP816DGVQ');
+</script>
+
+
   </body>
 </html>
