updated professional experience

--- a/cv.html
+++ b/cv.html
@@ -30,12 +30,22 @@ aside:
       <dl>
         <dt>Professional Experience</dt>
         <dd>
+          <h1>Head and Curator, David Rumsey Map Center</h1>
+          <h2>Stanford University Library</h2>
+          <p class="location">Stanford, California</p>
+          <p class="dates">2023 – present</p>
+          <p class="description">
+            Oversee the stewardship of a significant historical map collection and manage a team of professional colleagues.
+          </p>
+
+          <br />
+
           <h1>Geographic Information Systems (GIS) Librarian</h1>
           <h2>University of British Columbia Library</h2>
           <p class="location">Vancouver, British Columbia</p>
-          <p class="dates">2017 – present</p>
+          <p class="dates">2017 – 2023</p>
           <p class="description">
-            Works to advance teaching, learning, and research with geospatial information and technology campus-wide. Coordinates efforts to improve existing resources for maps, atlases, and geodata collections, as well as library services to better equip a large base of GIS users. Regularly participates in grant-funded projects and community-oriented events. Supervises the work of several students working within the map collection, providing consultation services, and delivering workshops. 
+            Worked to advance teaching, learning, and research with geospatial information and technology campus-wide. Coordinated efforts to improve existing resources for maps, atlases, and geodata collections, as well as library services to better equip a large base of GIS users. Regularly participates in grant-funded projects and community-oriented events. Supervised the work of several students working within the map collection, provided consultation services, and delivered workshops. 
           </p>
 
           <br />
