updated professional experience

--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@ aside:
         Web:
         <a href="https://evanthornberry.github.io/">evanthornberry.github.io</a>
       </p> -->
-      <p>Email: <a href="mailto:evan.thornberry@ubc.ca">evan.thornberry@ubc.ca</a></p>
+      <p>Email: <a href="mailto:evanthornberry@stanford.edu">evanthornberry@stanford.edu</a></p>
       <p id="objective">
         I am a knowledgeable geospatial librarian with demonstrated success in academic and cultural heritage institutions. While I have over 12 years of experience, I still learn something new every day by embracing new ideas, keeping up with emerging technologies, and seeking feedback. 
       </p>
