--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@ aside:
       </p> -->
       <p>Email: <a href="mailto:evanthornberry@stanford.edu">evanthornberry@stanford.edu</a></p>
       <p id="objective">
-        I am a knowledgeable geospatial librarian with demonstrated success in academic and cultural heritage institutions. While I have over 12 years of experience, I still learn something new every day by embracing new ideas, keeping up with emerging technologies, and seeking feedback. 
+        I am a knowledgeable geospatial librarian and curator with demonstrated success in academic and cultural heritage institutions. While I have over 13 years of experience, I still learn something new every day by embracing new ideas, keeping up with emerging technologies, and seeking feedback. 
       </p>
 
       <dl>
@@ -227,6 +227,11 @@ aside:
             Archives Bulletin. No. 166, 25-30. DOI: 10.15353/acmla.n166.3463
           </p>
           <p class="hangingindent">
+            Thornberry, E., White, P. (2020). GitHub and Jekyll for Publishing
+            GIS Workshop Content Association of Canadian Map Libraries and
+            Archives Bulletin. No. 166, 25-30. DOI: 10.15353/acmla.n166.3463
+          </p>
+          <p class="hangingindent">
             Thornberry, E. (2019). [Review of the book British Columbia: A New
             Historical Atlas, by Derek Hayes] Association of Canadian Map
             Libraries and Archives Bulletin. No. 163, 2-3. DOI:
@@ -255,6 +260,15 @@ aside:
       <dl>
         <dt>Selected Presentations</dt>
         <dd>
+          <h2>
+            Globes – an App for the Apple Vision Pro
+          </h2>
+          <p class="location">
+            North American Cartographic Information Society Conference –
+            Tacoma, Washington
+          </p>
+          <p class="dates">2024</p>
+          <br />
           <h2>
             OpenIndexMaps: The Next Generation of Collaborative Digital Index
             Maps
@@ -355,6 +369,11 @@ aside:
       <dl>
         <dt>Invited Workshops</dt>
         <dd>
+          <h2>From Paper to Points, Lines, Polygons; Transforming Historic Maps into Data
+          </h2>
+          <p class="location">Love Data Week 2025 @ Stanford University</p>
+          <p class="dates">2025</p>
+          <br />
           <h2>GitHub Grab Bag for Geo Librarians</h2>
           <p class="location">Geo4Lib Virtual Community Event</p>
           <p class="dates">2022</p>
@@ -417,18 +436,18 @@ aside:
           <p class="location">
             Techincal Advisory Board Member, Robert Woods Johnson Fund Project to Support Social Determinants of Health Data Discoverbility and Empower Community of Practice
           </p>
-          <p class="dates">January 2023 - present</p>
+          <p class="dates">January 2023 - September 2024</p>
           <br />
           <h2>International Cartographic Association</h2>
           <p class="location">
             Canadian National Exhibit Co-Coordinator, International Cartographic
             Conference
           </p>
-          <p class="dates">January 2023 - present</p>
+          <p class="dates">January 2023 - September 2023</p>
           <br />
           <h2>Western Association of Map Libraries</h2>
           <p class="location">Past President</p>
-          <p class="dates">July 2022 - present</p>
+          <p class="dates">July 2022 - June 2023</p>
           <p class="location">President</p>
           <p class="dates">July 2021 - June 2022</p>
           <p class="location">President Elect</p>
@@ -436,7 +455,7 @@ aside:
           <br />
           <h2>Maptime Vancouver</h2>
           <p class="location">Local Organizer</p>
-          <p class="dates">November 2019 - present</p>
+          <p class="dates">November 2019 - October 2023</p>
           <br />
           <h2>Boston Map Society</h2>
           <p class="location">Vice President</p>
